Refactor javax to jakarta